; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_base.c_base_set_log_handler.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_base.c_base_set_log_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@def_log_handler = common dso_local global i64 0, align 8
@log_param = common dso_local global i8* null, align 8
@log_handler = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @base_set_log_handler(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %2
  %8 = load i64, i64* @def_log_handler, align 8
  store i64 %8, i64* %3, align 8
  br label %9

9:                                                ; preds = %7, %2
  %10 = load i8*, i8** %4, align 8
  store i8* %10, i8** @log_param, align 8
  %11 = load i64, i64* %3, align 8
  store i64 %11, i64* @log_handler, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
